--- a/FileComponent/pom.xml
+++ b/FileComponent/pom.xml
@@ -32,6 +32,19 @@
 			<artifactId>camel-csv-starter</artifactId>
 			<version>3.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-velocity-starter</artifactId>
+			<version>3.5.0</version>
+			<!-- use the same version as your Camel core version -->
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
